# Jetson-Nano-STM32F407

./: README.md  graph TD.mmd  ros2_package_analysis.md  yolov8n.pt
src/vehicle_bringup/: package.xml  setup.py
src/vehicle_bringup/launch/: vehicle.launch.py  vehicle_nav2.launch.py
src/vehicle_control/: package.xml  setup.py
src/vehicle_control/vehicle_control/: cmd_converter.py
src/vehicle_drivers/gps_node/: CMakeLists.txt  package.xml
src/vehicle_drivers/gps_node/launch/: gps.launch.py
src/vehicle_drivers/gps_node/src/: gps_publisher_node.cpp  gps_subscriber_node.cpp
src/vehicle_drivers/imu_gps_driver/: CMakeLists.txt  package.xml
src/vehicle_drivers/imu_gps_driver/config/: params.yaml
src/vehicle_drivers/imu_gps_driver/launch/: imu_gps.launch.py
src/vehicle_drivers/imu_gps_driver/src/: gps_publisher_node.cpp  imu_gps_parser_node.cpp  imu_gps_subscriber_node.cpp  imu_publisher_node.cpp
src/vehicle_drivers/imu_node/: CMakeLists.txt  imu_usb.rules  package.xml  setup.py
src/vehicle_drivers/imu_node/launch/: imu.launch.py
src/vehicle_drivers/imu_node/src/: imu_client_node.cpp  imu_publisher_node.cpp
src/vehicle_drivers/lidar_node/: CMakeLists.txt  package.xml
src/vehicle_drivers/lidar_node/launch/: lidar.launch.py
src/vehicle_drivers/lidar_node/src/: lidar_cline_node.cpp  lidar_publisher_node.cpp
src/vehicle_drivers/stm32_serial_bridge/: CMakeLists.txt  package.xml
src/vehicle_drivers/stm32_serial_bridge/launch/: bridge_launch.py  stm32_serial_bridge.launch.py
src/vehicle_drivers/stm32_serial_bridge/msg/: MotorCommand.msg  MotorServoCmd.msg  Telemetry.msg
src/vehicle_drivers/stm32_serial_bridge/src/: stm32_serial_bridge_node.cpp
src/vehicle_drivers/vision_node/: CMakeLists.txt  package.xml  setup.py
src/vehicle_drivers/vision_node/include/vision_node/: camera_node.hpp
src/vehicle_drivers/vision_node/launch/: vision.launch.py
src/vehicle_drivers/vision_node/src/: camera_node.cpp  yolo_video_subscriber.cpp
src/vehicle_drivers/vision_node/vision_node/: yolo_node.py
src/vehicle_drivers/vision_node/vision_package/: camera_node.py  yolo_node.py  yolo_video_subscriber.py
src/vehicle_localization/: package.xml  setup.py
src/vehicle_localization/config/: ekf.yaml
src/vehicle_localization/launch/: localization.launch.py
src/vehicle_localization/vehicle_localization/: telemetry_to_odom_node.py
src/vehicle_perception/: package.xml  setup.py
src/vehicle_perception/vehicle_perception/: obstacle_detector.py  road_detector.py  traffic_sign_detector.py  yolo_detector.py
src/vehicle_planning/: package.xml  setup.py
src/vehicle_planning/behavior_trees/: vehicle_mission_bt.xml
src/vehicle_planning/config/: nav2_params.yaml
src/vehicle_planning/launch/: path_planning.launch.py
src/vehicle_planning/test/: test_waypoint_parser.py
src/vehicle_planning/vehicle_planning/: cmd_vel_to_motor_node.py  global_planner.py  local_planner.py  nav2_mission_executor.py  path_planner.py  road_network_parser.py  waypoint_parser.py
