<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vehicle_bringup</name>
  <version>0.0.0</version>
  <description>Vehicle bringup package for launching all nodes</description>
  <maintainer email="19804188212@163.com">david0529</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>robot_localization</depend>
  <depend>vision_msgs</depend>

  <exec_depend>vision_node</exec_depend>
  <exec_depend>vehicle_localization</exec_depend>
  <exec_depend>vehicle_perception</exec_depend>
  <exec_depend>vehicle_planning</exec_depend>
  <exec_depend>imu_gps_parser</exec_depend>
  <exec_depend>lidar_node</exec_depend>
  <exec_depend>stm32_serial_bridge</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
</package>
