<?xml version="1.0"?>
<package format="3">
    <name>gps_node</name>
    <version>0.1.0</version>
    <description>GPS Node for ROS2</description>

    <maintainer email="user@example.com">Your Name</maintainer>
    <license>Apache 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>std_msgs</depend>

    <!-- launch文件支持 -->
    <exec_depend>ros2launch</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>